--- a/style.css
+++ b/style.css
@@ -7,6 +7,69 @@ html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 /* Add styles here! */
+
+.max-width-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+header {
+  margin-top: 72px;
+  background-color: white;
+  border-bottom: hsl(0deg, 0%, 60%) 8px solid;
+}
+
+header .max-width-wrapper {
+  max-width: 800px;
+}
+
+main {
+  background-color: hsl(0deg, 0%, 40%);
+  padding: 64px 0;
+}
+
+main .max-width-wrapper {
+  max-width: 800px;
+}
+
+.intro-chunk {
+  max-width: 415px;
+  margin-bottom: 0 0 64px 0;
+  padding: 24px;
+
+}
+
+.card {
+  background-color: white;
+  padding: 8px 24px 24px 24px;
+  border-bottom: hsl(0deg, 0%, 60%) 8px solid;
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 2rem;
+}
+
+em {
+  font-style: normal;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+h1.title {
+  margin-bottom: 48px;
+}
+
+h2.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: hsl(45deg, 100%, 40%) 8px solid;
+  width: fit-content;
+  padding: 16px 16px 16px 32px;
+  margin: 0 0 0 -32px;
+}
